--- a/Projects/BMI index/style.css
+++ b/Projects/BMI index/style.css
@@ -1,4 +1,8 @@
-*{
+* {
+    font-family: "Roboto Mono", monospace;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
     padding: 0;
     margin: 0;
     box-sizing: border-box;
